<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 最上面的输入框 -->
    <LinearLayout
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editText"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:inputType="number" >
        </EditText>
    </LinearLayout>

    <!-- 第一排四个按钮 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Number1"
            android:textSize="42sp" >
        </Button>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Number2"
            android:textSize="42sp" >
        </Button>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Number3"
            android:textSize="42sp" >
        </Button>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Number4"
            android:textSize="42sp" >
        </Button>
    </LinearLayout>

    <!-- 第二排四个按钮 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Number5"
            android:textSize="42sp" >
        </Button>

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Number6"
            android:textSize="42sp" >
        </Button>

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Number7"
            android:textSize="42sp" >
        </Button>

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Number8"
            android:textSize="42sp" >
        </Button>
    </LinearLayout>

    <!-- 第三排三个按钮 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Number9"
            android:textSize="42sp" >
        </Button>

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dian"
            android:textSize="42sp" >
        </Button>

        <Button
            android:id="@+id/button18"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="@string/zhengfu"
            android:textSize="42sp" >
        </Button>
    </LinearLayout>

    <!-- 第四排三个按钮 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jia"
            android:textSize="42sp" >
        </Button>

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jian"
            android:textSize="42sp" >
        </Button>

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cheng"
            android:textSize="42sp" >
        </Button>

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chu"
            android:textSize="42sp" >
        </Button>
    </LinearLayout>

    <!-- 关闭按钮 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/dengyu"
            android:textSize="42sp" >
        </Button>

        <Button
            android:id="@+id/button17"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="@string/clear"
            android:textSize="42sp" >

        </Button>

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Number0"
            android:textSize="42sp" />

    </LinearLayout>

</LinearLayout>
